<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/itemPostLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/post_item_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/itemImagePreview"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/ic_search"
        android:visibility="visible"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/postItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_item_description"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemImagePreview"/>

    <TextView
        android:id="@+id/postItemCreateDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_item_date"
        android:textSize="12sp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postItemDescription"
        app:layout_constraintStart_toEndOf="@id/itemImagePreview"/>

    <TextView
        android:id="@+id/postItemPostedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_for_posted"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>