<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShowPostActivity">

    <ImageView
        android:id="@+id/menuButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:background="@drawable/post_item_background"
        app:layout_constraintStart_toEndOf="@id/menuButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_search"/>

        <EditText
            android:id="@+id/postSearchField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/search_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:background="@null"/>
    </LinearLayout>

    <TextView
        android:id="@+id/showPostTextEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/empty_list_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/searchLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/showPostButtonCreateNew"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:padding="8dp"
        android:background="@drawable/add_main_button_bg"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>